// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation test suite renders first run screen 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenStack
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        collapsable={false}
        forwardedRef={[Function]}
        gestureResponseDistance={
          Object {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        nativeBackButtonDismissalEnabled={false}
        onAppear={[Function]}
        onDisappear={[Function]}
        onDismissed={[Function]}
        onHeaderBackButtonClicked={[Function]}
        onNativeDismissCancelled={[Function]}
        onTransitionProgress={[Function]}
        onWillDisappear={[Function]}
        replaceAnimation="push"
        stackPresentation="push"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        swipeDirection="horizontal"
      >
        <RNSScreenStackHeaderConfig
          backButtonInCustomView={false}
          backgroundColor="rgb(255, 255, 255)"
          color="#0891b2"
          direction="ltr"
          disableBackButtonMenu={false}
          hidden={false}
          hideBackButton={false}
          largeTitleHideShadow={false}
          title="Welcome"
          titleColor="rgb(28, 28, 30)"
          topInsetEnabled={false}
          translucent={false}
        />
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          style={
            Object {
              "flex": 1,
              "flexDirection": "column-reverse",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                },
                undefined,
              ]
            }
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "marginTop": 8,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                }
              }
            >
              <View
                dataSet={Object {}}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text />
                <View
                  dataSet={Object {}}
                  style={Object {}}
                />
                <Text />
                <View
                  dataSet={Object {}}
                  style={Object {}}
                />
                <View
                  dataSet={Object {}}
                  style={Object {}}
                >
                  <Text
                    dataSet={Object {}}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "color": "#db2777",
                        "fontFamily": undefined,
                        "fontSize": 20,
                        "fontStyle": "normal",
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 30,
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    Living Snow Project
                  </Text>
                  <View
                    dataSet={Object {}}
                    style={Object {}}
                  />
                  <Text
                    dataSet={Object {}}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "color": "#ec4899",
                        "fontFamily": undefined,
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 21,
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    See pink snow? Let us know!
                  </Text>
                </View>
                <View
                  dataSet={Object {}}
                  style={Object {}}
                />
                <Text />
                <View
                  dataSet={Object {}}
                  style={Object {}}
                />
                <Text />
              </View>
              <Text
                dataSet={Object {}}
                style={
                  Object {
                    "backgroundColor": undefined,
                    "color": "#171717",
                    "fontFamily": undefined,
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 21,
                    "marginBottom": 8,
                    "marginTop": 8,
                    "textDecorationLine": undefined,
                  }
                }
              >
                Let us know who you are or remain anonymous. You can update your profile at any time in the Settings tab.
              </Text>
              <View
                dataSet={Object {}}
                isInvalid={false}
                isRequired={false}
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                <View
                  dataSet={Object {}}
                  feedbackId="field-3-feedback"
                  hasFeedbackText={true}
                  hasHelpText={false}
                  helpTextId="field-3-helptext"
                  isDisabled={false}
                  isInvalid={false}
                  isReadOnly={false}
                  isRequired={false}
                  labelId="field-3-label"
                  nativeID="field-3-label"
                  setHasFeedbackText={[Function]}
                  setHasHelpText={[Function]}
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                      "marginBottom": 4,
                      "marginTop": 4,
                    }
                  }
                >
                  <Text
                    dataSet={Object {}}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "color": "#737373",
                        "fontFamily": undefined,
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 21,
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    Name
                  </Text>
                </View>
                <View
                  dataSet={Object {}}
                  isFocused={false}
                  style={
                    Object {
                      "alignItems": "center",
                      "borderColor": "#d4d4d4",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "overflow": "hidden",
                    }
                  }
                >
                  <TextInput
                    accessibilityDescribedBy="field-3-feedback"
                    accessible={true}
                    blurOnSubmit={false}
                    dataSet={Object {}}
                    disabled={false}
                    editable={true}
                    isRequired={false}
                    maxLength={50}
                    nativeID="field-3-input"
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder="Enter your name"
                    placeholderTextColor="#a3a3a3"
                    readOnly={false}
                    required={false}
                    returnKeyType="done"
                    secureTextEntry={false}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#171717",
                        "flex": 1,
                        "fontFamily": undefined,
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "height": "100%",
                        "paddingBottom": 8,
                        "paddingLeft": 12,
                        "paddingRight": 12,
                        "paddingTop": 8,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
              <View
                dataSet={Object {}}
                isInvalid={false}
                isRequired={false}
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                <View
                  dataSet={Object {}}
                  feedbackId="field-4-feedback"
                  hasFeedbackText={true}
                  hasHelpText={false}
                  helpTextId="field-4-helptext"
                  isDisabled={false}
                  isInvalid={false}
                  isReadOnly={false}
                  isRequired={false}
                  labelId="field-4-label"
                  nativeID="field-4-label"
                  setHasFeedbackText={[Function]}
                  setHasHelpText={[Function]}
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                      "marginBottom": 4,
                      "marginTop": 4,
                    }
                  }
                >
                  <Text
                    dataSet={Object {}}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "color": "#737373",
                        "fontFamily": undefined,
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 21,
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    Organization
                  </Text>
                </View>
                <View
                  dataSet={Object {}}
                  isFocused={false}
                  style={
                    Object {
                      "alignItems": "center",
                      "borderColor": "#d4d4d4",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "overflow": "hidden",
                    }
                  }
                >
                  <TextInput
                    accessibilityDescribedBy="field-4-feedback"
                    accessible={true}
                    blurOnSubmit={true}
                    dataSet={Object {}}
                    disabled={false}
                    editable={true}
                    isRequired={false}
                    maxLength={50}
                    nativeID="field-4-input"
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder="Enter organization you belong to (if any)"
                    placeholderTextColor="#a3a3a3"
                    readOnly={false}
                    required={false}
                    returnKeyType="done"
                    secureTextEntry={false}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#171717",
                        "flex": 1,
                        "fontFamily": undefined,
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "height": "100%",
                        "paddingBottom": 8,
                        "paddingLeft": 12,
                        "paddingRight": 12,
                        "paddingTop": 8,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
              <View
                dataSet={Object {}}
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessible={true}
                  collapsable={false}
                  colorScheme="primary"
                  dataSet={Object {}}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#0891b2",
                      "borderRadius": 4,
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "marginTop": 20,
                      "paddingBottom": 10,
                      "paddingLeft": 12,
                      "paddingRight": 12,
                      "paddingTop": 10,
                      "width": 200,
                    }
                  }
                >
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                    test={true}
                  >
                    <View
                      dataSet={Object {}}
                      style={Object {}}
                    >
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#fafafa",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        Start Reporting
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenStack>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Navigation test suite renders timeline screen 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenStack
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        collapsable={false}
        forwardedRef={[Function]}
        gestureResponseDistance={
          Object {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        nativeBackButtonDismissalEnabled={false}
        onAppear={[Function]}
        onDisappear={[Function]}
        onDismissed={[Function]}
        onHeaderBackButtonClicked={[Function]}
        onNativeDismissCancelled={[Function]}
        onTransitionProgress={[Function]}
        onWillDisappear={[Function]}
        replaceAnimation="push"
        stackPresentation="push"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        swipeDirection="horizontal"
      >
        <RNSScreenStackHeaderConfig
          backButtonInCustomView={false}
          backgroundColor="rgb(255, 255, 255)"
          color="#0891b2"
          direction="ltr"
          disableBackButtonMenu={false}
          hidden={false}
          hideBackButton={false}
          largeTitleHideShadow={false}
          title="Timeline"
          titleColor="rgb(28, 28, 30)"
          topInsetEnabled={false}
          translucent={false}
        >
          <RNSScreenStackHeaderSubview
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            type="left"
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "marginLeft": 25,
                  },
                  Object {
                    "opacity": 1,
                  },
                ]
              }
              testID="timeline-screen-settings-button"
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#0891b2",
                      "fontSize": 32,
                    },
                    undefined,
                    Object {
                      "fontFamily": "ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="timeline-screen-settings-button-settings-outline"
              >
                
              </Text>
            </View>
          </RNSScreenStackHeaderSubview>
          <RNSScreenStackHeaderSubview
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            type="right"
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "marginRight": 25,
                  },
                  Object {
                    "opacity": 1,
                  },
                ]
              }
              testID="timeline-screen-record-button"
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#0891b2",
                      "fontSize": 32,
                    },
                    undefined,
                    Object {
                      "fontFamily": "ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="timeline-screen-record-button-add-circle-outline"
              >
                
              </Text>
            </View>
          </RNSScreenStackHeaderSubview>
        </RNSScreenStackHeaderConfig>
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          style={
            Object {
              "flex": 1,
              "flexDirection": "column-reverse",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                },
                undefined,
              ]
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "rgba(214, 211, 209, 1)",
                }
              }
            >
              <Text
                dataSet={Object {}}
                style={
                  Object {
                    "backgroundColor": undefined,
                    "color": "#171717",
                    "fontFamily": undefined,
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 21,
                    "textAlign": "center",
                    "textDecorationLine": undefined,
                  }
                }
              >
                No Internet Connection
              </Text>
            </View>
            <RCTScrollView
              ListEmptyComponent={[Function]}
              contentContainerStyle={
                Array [
                  Object {},
                  Object {
                    "dataSet": Object {},
                  },
                  Object {},
                ]
              }
              data={Array []}
              dataSet={Object {}}
              getItem={[Function]}
              getItemCount={[Function]}
              keyExtractor={[Function]}
              onContentSizeChange={[Function]}
              onEndReached={[Function]}
              onEndReachedThreshold={5}
              onLayout={[Function]}
              onMomentumScrollBegin={[Function]}
              onMomentumScrollEnd={[Function]}
              onRefresh={[Function]}
              onScroll={[Function]}
              onScrollBeginDrag={[Function]}
              onScrollEndDrag={[Function]}
              refreshControl={
                <RefreshControlMock
                  onRefresh={[Function]}
                  refreshing={false}
                />
              }
              refreshing={false}
              removeClippedSubviews={false}
              renderItem={[Function]}
              scrollEventThrottle={50}
              stickyHeaderIndices={Array []}
              style={Object {}}
              testID="timeline-screen-flatlist"
              viewabilityConfigCallbackPairs={Array []}
            >
              <RCTRefreshControl />
              <View>
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "backgroundColor": "#a8a29e",
                      "width": "100%",
                    }
                  }
                >
                  <Text
                    dataSet={Object {}}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "color": "#171717",
                        "fontFamily": undefined,
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 21,
                        "textAlign": "center",
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    Example Record
                  </Text>
                </View>
                <View
                  accessible={true}
                  collapsable={false}
                  dataSet={Object {}}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={Object {}}
                  testID="1234"
                >
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      style={Object {}}
                    >
                      <View
                        dataSet={Object {}}
                        style={
                          Object {
                            "flexDirection": "row",
                          }
                        }
                      >
                        <View
                          dataSet={Object {}}
                          style={
                            Object {
                              "width": "15%",
                            }
                          }
                        >
                          <View
                            dataSet={Object {}}
                            style={
                              Object {
                                "alignItems": "center",
                                "backgroundColor": "#f0abfc",
                                "borderColor": "#27272a",
                                "borderRadius": 9999,
                                "height": 48,
                                "justifyContent": "center",
                                "marginTop": 4,
                                "position": "relative",
                                "width": 48,
                              }
                            }
                          >
                            <Text
                              dataSet={Object {}}
                              style={
                                Object {
                                  "backgroundColor": undefined,
                                  "color": "#fafafa",
                                  "fontFamily": undefined,
                                  "fontSize": 16,
                                  "fontStyle": "normal",
                                  "fontWeight": "600",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                  "textDecorationLine": undefined,
                                }
                              }
                            >
                              HI
                            </Text>
                          </View>
                        </View>
                        <View
                          dataSet={Object {}}
                          style={
                            Object {
                              "paddingRight": 4,
                              "width": "78%",
                            }
                          }
                        >
                          <View
                            dataSet={Object {}}
                            style={
                              Object {
                                "marginLeft": 8,
                              }
                            }
                          >
                            <Text
                              dataSet={Object {}}
                              style={
                                Object {
                                  "backgroundColor": undefined,
                                  "color": "#171717",
                                  "fontFamily": undefined,
                                  "fontSize": 14,
                                  "fontStyle": "normal",
                                  "fontWeight": "600",
                                  "letterSpacing": 0,
                                  "lineHeight": 21,
                                  "textDecorationLine": undefined,
                                }
                              }
                            >
                              Helpful Individual
                            </Text>
                            <View
                              dataSet={Object {}}
                              style={Object {}}
                            />
                            <Text
                              dataSet={Object {}}
                              style={
                                Object {
                                  "backgroundColor": undefined,
                                  "color": "#171717",
                                  "fontFamily": undefined,
                                  "fontSize": 14,
                                  "fontStyle": "normal",
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 21,
                                  "textDecorationLine": undefined,
                                }
                              }
                            >
                              Community Scientist
                            </Text>
                            <View
                              dataSet={Object {}}
                              style={Object {}}
                            />
                            <Text
                              dataSet={Object {}}
                              style={
                                Object {
                                  "backgroundColor": undefined,
                                  "color": "#db2777",
                                  "fontFamily": undefined,
                                  "fontSize": 14,
                                  "fontStyle": "normal",
                                  "fontWeight": "700",
                                  "letterSpacing": 0,
                                  "lineHeight": 21,
                                  "textDecorationLine": undefined,
                                }
                              }
                            >
                              Sample, 2022-04-01
                            </Text>
                          </View>
                        </View>
                        <View
                          dataSet={Object {}}
                          style={Object {}}
                        />
                        <View
                          dataSet={Object {}}
                          style={
                            Object {
                              "width": "7%",
                            }
                          }
                        />
                      </View>
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      />
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#171717",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "500",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        White Chuck Glacier, Glacier Peak Wilderness, WA
                      </Text>
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      />
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#171717",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        Dark red algae in runnels
                      </Text>
                    </View>
                  </View>
                  <Image
                    accessibilityLabel="static image"
                    alt="static image"
                    dataSet={Object {}}
                    onError={[Function]}
                    source={1}
                    style={
                      Object {
                        "maxWidth": "100%",
                      }
                    }
                  />
                </View>
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "backgroundColor": "#d6d3d1",
                      "height": 12,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </RCTScrollView>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenStack>
  </View>
</RNCSafeAreaProvider>
`;
